larger edit reorganize

--- a/scripts/ERA5DataClean.Rmd
+++ b/scripts/ERA5DataClean.Rmd
@@ -216,7 +216,7 @@ clean2010 = df2010 %>% cleanDf()
 clean2011 = df2011 %>% cleanDf()
 clean2012 = df2012 %>% cleanDf()
 clean2013 = df2013 %>% cleanDf()
-clean2014= df2014 %>% cleanDf()
+clean2014 = df2014 %>% cleanDf()
 ```
 
 ```{r}
@@ -228,67 +228,131 @@ clean2019 = df2019 %>% cleanDf()
 clean2020 = df2020 %>% cleanDf()
 ```
 
-# write to csv
-```{r eval=FALSE, include=FALSE}
-write.csv(clean2001,file = "../outputs/era5Clean/clean2001.csv")
-write.csv(clean2005,file = "../outputs/era5Clean/clean2005.csv")
-write.csv(clean2006,file = "../outputs/era5Clean/clean2006.csv")
-write.csv(clean2007,file = "../outputs/era5Clean/clean2007.csv")
-write.csv(clean2008,file = "../outputs/era5Clean/clean2008.csv")
-```
+# Combine all clean
 
-```{r eval=FALSE, include=FALSE}
-write.csv(clean2009,file = "../outputs/era5Clean/clean2009.csv")
-write.csv(clean2010,file = "../outputs/era5Clean/clean2010.csv")
-write.csv(clean2011,file = "../outputs/era5Clean/clean2011.csv")
-write.csv(clean2012,file = "../outputs/era5Clean/clean2012.csv")
-write.csv(clean2013,file = "../outputs/era5Clean/clean2013.csv")
-```
 
-```{r eval=FALSE, include=FALSE}
-write.csv(clean2014,file = "../outputs/era5Clean/clean2014.csv")
-write.csv(clean2015,file = "../outputs/era5Clean/clean2015.csv")
-write.csv(clean2016,file = "../outputs/era5Clean/clean2016.csv")
-write.csv(clean2017,file = "../outputs/era5Clean/clean2017.csv")
-write.csv(clean2018,file = "../outputs/era5Clean/clean2018.csv")
-```
 
-```{r eval=FALSE, include=FALSE}
-write.csv(clean2019,file = "../outputs/era5Clean/clean2019.csv")
-write.csv(clean2020,file = "../outputs/era5Clean/clean2020.csv")
-```
+
+
+
 
 ## Identify ALT date
 
 ### 2001
+
+```{r}
+clean2001 
+```
+
+```{r}
+uniqueDate = clean2001 %>%
+  arrange(id, tempDate) %>% # sorts from first to last date
+  group_by(id) %>% # group by ids
+  mutate(RollMean = zoo::rollmean(TempC, k = 5, fill = NA)) %>% # calculate a rolling mean of temp
+    filter(julianTemp >= 200)  %>% # select dates after Julian day 200
+    ungroup() %>% # ungroup
+    filter(RollMean <=0) %>% # remove rolling means greater than or equal to zero
+    group_by(last_nm, plot_id, site_id) 
+
+unique(uniqueDate$tempDate)
+unique(uniqueDate$site_id)
+
+clean2001 %>%
+  arrange(id, tempDate) %>% # sorts from first to last date
+  group_by(id) %>% # group by ids
+  mutate(RollMean = zoo::rollmean(TempC, k = 5, fill = NA)) %>% # calculate a rolling mean of temp
+    filter(julianTemp >= 200)  %>% # select dates after Julian day 200
+    ungroup() %>% # ungroup
+    filter(RollMean <=0) %>% # remove rolling means greater than or equal to zero
+    group_by(last_nm, plot_id, site_id) %>%
+  summarize(meanTemp = mean(TempC))
+```
+```{r}
+clean2001 %>%
+  arrange(id, tempDate) %>% # sorts from first to last date
+  group_by(id) %>% # group by ids
+  mutate(RollMean = zoo::rollmean(TempC, k = 5, fill = NA)) %>% # calculate a rolling mean of temp
+    filter(julianTemp >= 200)  %>% # select dates after Julian day 200
+    ungroup() %>% # ungroup
+    filter(RollMean <=0) %>% # remove rolling means greater than or equal to zero  
+
+    group_by(last_nm, plot_id, site_id, year) %>% # regroup by last name, plot id, and site id
+  #filter(site_id== "DFTB") %>%
+    arrange(julianTemp) %>% # sort by date of temp measures
+  mutate(julianTemp_diff = julianTemp - lag(julianTemp)) %>%
+  filter(julianTemp_diff >= 1) %>%
+  summarize(minDate = min(julianTemp),
+            meanDate = mean(julianTemp),
+            maxDate = max(julianTemp)) %>%
+    ungroup() %>%
+  dplyr::select(last_nm, plot_id, site_id, year, minDate) 
+```
+
+```{r}
+( date = clean2001 %>%
+  arrange(id, tempDate) %>% # sorts from first to last date
+  group_by(id) %>% # group by ids
+  mutate(RollMean = zoo::rollmean(TempC, k = 5, fill = NA)) %>% # calculate a rolling mean of temp
+
+    filter(julianTemp >= 200)  %>% # select dates after Julian day 200
+    ungroup() %>% # ungroup
+    filter(RollMean <=0) %>% # remove rolling means greater than or equal to zero  
+
+    group_by(last_nm, plot_id, site_id, year) %>% # regroup by last name, plot id, and site id
+  #filter(site_id== "DFTB") %>%
+    arrange(julianTemp) %>% # sort by date of temp measures
+  mutate(julianTemp_diff = julianTemp - lag(julianTemp)) %>%
+  filter(julianTemp_diff >= 1) %>%
+  summarize(minDate = min(julianTemp),
+            meanDate = mean(julianTemp),
+            maxDate = max(julianTemp)) %>%
+    ungroup() %>%
+  dplyr::select(last_nm, plot_id, site_id, year, minDate) 
+  )
+
+date %>% distinct(plot_id, site_id, year) 
+```
+
+
+### Get ALT date
 ```{r}
 ( rm2001 = clean2001 %>%
   arrange(id, tempDate) %>%
   group_by(id) %>%
   mutate(RollMean = zoo::rollmean(TempC, k = 5, fill = NA)) %>% 
-    filter(thw_ctv =="thaw") %>% 
     filter(julianTemp>=200)  %>%
     ungroup() %>%
     filter(RollMean <=0) %>%
-    group_by(plot_id, site_id) %>%
-    arrange(julianTemp) %>%
-  mutate(Goal = cumsum(c(1, diff(tempDate) > 1))) %>%
-  group_by(plot_id, site_id, Goal) %>%
-  mutate(Goal2 = min(tempDate), Goal3 = max(tempDate))
+    group_by(last_nm, plot_id, site_id, year) %>% # regroup by last name, plot id, and site id
+  #filter(site_id== "DFTB") %>%
+    arrange(julianTemp) %>% # sort by date of temp measures
+  mutate(julianTemp_diff = julianTemp - lag(julianTemp)) %>%
+  filter(julianTemp_diff >= 1) %>%
+  summarize(minDate = min(julianTemp),
+            meanDate = mean(julianTemp),
+            maxDate = max(julianTemp)) %>%
+    ungroup() %>%
+  dplyr::select(last_nm, plot_id, site_id, year, minDate) 
     
   )
 
-( distinct2001 = rm2001 %>% distinct(plot_id, site_id, year, julianTemp, Goal2, Goal3) )
+( distinct2001 = rm2001 %>% distinct(plot_id, site_id, year) )
 
 ```
+
+
 
 ```{r}
-( act = clean2001 %>%
-  filter(thw_ctv =="active") 
+( 
+  combine2001 = merge(clean2001, rm2001[, c('plot_id', 'site_id', 'year', 'minDate')], by = c('plot_id', 'site_id', 'year'), all.x=TRUE) 
 )
-
-unique(act$julinDt)
 ```
+#### write to csv 
+```{r}
+write.csv(combine2001,file = "../outputs/era5Clean/combine2001.csv")
+```
+ 
+
 
 ### 2005
 ```{r}
@@ -296,379 +360,630 @@ unique(act$julinDt)
   arrange(id, tempDate) %>%
   group_by(id) %>%
   mutate(RollMean = zoo::rollmean(TempC, k = 5, fill = NA)) %>% 
-    filter(thw_ctv =="thaw") %>% 
     filter(julianTemp>=200)  %>%
     ungroup() %>%
     filter(RollMean <=0) %>%
-    group_by(last_nm, plot_id, site_id) %>%
-    arrange(julianTemp) %>%
-  mutate(Goal = cumsum(c(1, diff(tempDate) > 1))) %>%
-  group_by(plot_id, site_id, Goal) %>%
-  mutate(Goal2 = min(tempDate), Goal3 = max(tempDate))
+    group_by(last_nm, plot_id, site_id, year) %>% # regroup by last name, plot id, and site id
+  #filter(site_id== "DFTB") %>%
+    arrange(julianTemp) %>% # sort by date of temp measures
+  mutate(julianTemp_diff = julianTemp - lag(julianTemp)) %>%
+  filter(julianTemp_diff >= 1) %>%
+  summarize(minDate = min(julianTemp),
+            meanDate = mean(julianTemp),
+            maxDate = max(julianTemp)) %>%
+    ungroup() %>%
+  dplyr::select(last_nm, plot_id, site_id, year, minDate) 
     
   )
 
-(distinct2005 = rm2005 %>% distinct(plot_id, site_id, year, julianTemp, Goal2, Goal3) )
+( distinct2005 = rm2005 %>% distinct(plot_id, site_id, year) )
 
+```
+
+```{r}
+( 
+  combine2005 = merge(clean2005, rm2005[, c('plot_id', 'site_id', 'year', 'minDate')], by = c('plot_id', 'site_id', 'year'), all.x=TRUE) 
+)
+```
+#### write to csv 
+```{r}
+write.csv(combine2005,file = "../outputs/era5Clean/combine2005.csv")
 ```
 ### 2006 
 **2006 is active only**
 ```{r}
-clean2006
 ( rm2006 = clean2006 %>%
   arrange(id, tempDate) %>%
   group_by(id) %>%
   mutate(RollMean = zoo::rollmean(TempC, k = 5, fill = NA)) %>% 
-    filter(thw_ctv =="thaw") %>% 
-    filter(julianTemp >= 220)  %>%
+    filter(julianTemp>=200)  %>%
     ungroup() %>%
     filter(RollMean <=0) %>%
-    group_by(last_nm, plot_id, site_id) %>%
-    arrange(julianTemp) %>%
-  mutate(Goal = cumsum(c(1, diff(tempDate) > 1))) %>%
-  group_by(plot_id, site_id, Goal) %>%
-  mutate(Goal2 = min(tempDate), Goal3 = max(tempDate))
+    group_by(last_nm, plot_id, site_id, year) %>% # regroup by last name, plot id, and site id
+  #filter(site_id== "DFTB") %>%
+    arrange(julianTemp) %>% # sort by date of temp measures
+  mutate(julianTemp_diff = julianTemp - lag(julianTemp)) %>%
+  filter(julianTemp_diff >= 1) %>%
+  summarize(minDate = min(julianTemp),
+            meanDate = mean(julianTemp),
+            maxDate = max(julianTemp)) %>%
+    ungroup() %>%
+  dplyr::select(last_nm, plot_id, site_id, year, minDate) 
     
   )
 
-rm2006 %>% distinct(site_id, Goal2, Goal3)
+( distinct2006 = rm2006 %>% distinct(plot_id, site_id, year) )
 
 ```
+
+```{r}
+( 
+  combine2006 = merge(clean2006, rm2006[, c('plot_id', 'site_id', 'year', 'minDate')], by = c('plot_id', 'site_id', 'year'), all.x=TRUE) 
+)
+```
+
+#### write to csv 
+```{r}
+write.csv(combine2006,file = "../outputs/era5Clean/combine2006.csv")
+```
+
 ### 2007
 **2007 is active only**
 ```{r}
-
 ( rm2007 = clean2007 %>%
   arrange(id, tempDate) %>%
   group_by(id) %>%
   mutate(RollMean = zoo::rollmean(TempC, k = 5, fill = NA)) %>% 
-    filter(thw_ctv =="thaw") %>% 
-    filter(julianTemp >= 220)  %>%
+    filter(julianTemp>=200)  %>%
     ungroup() %>%
     filter(RollMean <=0) %>%
-    group_by(last_nm, plot_id, site_id) %>%
-    arrange(julianTemp) %>%
-  mutate(Goal = cumsum(c(1, diff(tempDate) > 1))) %>%
-  group_by(plot_id, site_id, Goal) %>%
-  mutate(Goal2 = min(tempDate), Goal3 = max(tempDate))
+    group_by(last_nm, plot_id, site_id, year) %>% # regroup by last name, plot id, and site id
+  #filter(site_id== "DFTB") %>%
+    arrange(julianTemp) %>% # sort by date of temp measures
+  mutate(julianTemp_diff = julianTemp - lag(julianTemp)) %>%
+  filter(julianTemp_diff >= 1) %>%
+  summarize(minDate = min(julianTemp),
+            meanDate = mean(julianTemp),
+            maxDate = max(julianTemp)) %>%
+    ungroup() %>%
+  dplyr::select(last_nm, plot_id, site_id, year, minDate) 
     
   )
 
-rm2007 %>% distinct(site_id, Goal2, Goal3)
+( distinct2007 = rm2007 %>% distinct(plot_id, site_id, year) )
 
 ```
+
+
+```{r}
+( 
+  combine2007 = merge(clean2007, rm2007[, c('plot_id', 'site_id', 'year', 'minDate')], by = c('plot_id', 'site_id', 'year'), all.x=TRUE) 
+)
+```
+
+#### write to csv 
+```{r}
+write.csv(combine2007,file = "../outputs/era5Clean/combine2007.csv")
+```
+
 ### 2008
 ```{r}
-
 ( rm2008 = clean2008 %>%
   arrange(id, tempDate) %>%
   group_by(id) %>%
   mutate(RollMean = zoo::rollmean(TempC, k = 5, fill = NA)) %>% 
-    filter(thw_ctv =="thaw") %>% 
-    filter(julianTemp >= 200)  %>%
+    filter(julianTemp>=200)  %>%
     ungroup() %>%
     filter(RollMean <=0) %>%
-    group_by(last_nm, plot_id, site_id) %>%
-    arrange(julianTemp) %>%
-  mutate(Goal = cumsum(c(1, diff(tempDate) > 1))) %>%
-  group_by(plot_id, site_id, Goal) %>%
-  mutate(Goal2 = min(tempDate), Goal3 = max(tempDate))
+    group_by(last_nm, plot_id, site_id, year) %>% # regroup by last name, plot id, and site id
+  #filter(site_id== "DFTB") %>%
+    arrange(julianTemp) %>% # sort by date of temp measures
+  mutate(julianTemp_diff = julianTemp - lag(julianTemp)) %>%
+  filter(julianTemp_diff >= 1) %>%
+  summarize(minDate = min(julianTemp),
+            meanDate = mean(julianTemp),
+            maxDate = max(julianTemp)) %>%
+    ungroup() %>%
+  dplyr::select(last_nm, plot_id, site_id, year, minDate) 
     
   )
 
-(distinct2008 = rm2008 %>% distinct(plot_id, site_id, year, julianTemp, Goal2, Goal3) )
+( distinct2008 = rm2008 %>% distinct(plot_id, site_id, year) )
+
 ```
+
+
+
+```{r}
+( 
+  combine2008 = merge(clean2008, rm2008[, c('plot_id', 'site_id', 'year', 'minDate')], by = c('plot_id', 'site_id', 'year'), all.x=TRUE) 
+)
+```
+
+#### write to csv 
+```{r}
+write.csv(combine2008,file = "../outputs/era5Clean/combine2008.csv")
+```
+
 ### 2009
 ```{r}
-
 ( rm2009 = clean2009 %>%
   arrange(id, tempDate) %>%
   group_by(id) %>%
   mutate(RollMean = zoo::rollmean(TempC, k = 5, fill = NA)) %>% 
-    filter(thw_ctv =="thaw") %>% 
-    filter(julianTemp >= 200)  %>%
+    filter(julianTemp>=200)  %>%
     ungroup() %>%
     filter(RollMean <=0) %>%
-    group_by(last_nm, plot_id, site_id) %>%
-    arrange(julianTemp) %>%
-  mutate(Goal = cumsum(c(1, diff(tempDate) > 1))) %>%
-  group_by(plot_id, site_id, Goal) %>%
-  mutate(Goal2 = min(tempDate), Goal3 = max(tempDate))
+    group_by(last_nm, plot_id, site_id, year) %>% # regroup by last name, plot id, and site id
+  #filter(site_id== "DFTB") %>%
+    arrange(julianTemp) %>% # sort by date of temp measures
+  mutate(julianTemp_diff = julianTemp - lag(julianTemp)) %>%
+  filter(julianTemp_diff >= 1) %>%
+  summarize(minDate = min(julianTemp),
+            meanDate = mean(julianTemp),
+            maxDate = max(julianTemp)) %>%
+    ungroup() %>%
+  dplyr::select(last_nm, plot_id, site_id, year, minDate) 
     
   )
 
-( distinct2009 = rm2009 %>% distinct(plot_id, site_id, year, julianTemp, Goal2, Goal3) )
+( distinct2009 = rm2009 %>% distinct(plot_id, site_id, year) )
+
 ```
+
+```{r}
+( 
+  combine2009 = merge(clean2009, rm2009[, c('plot_id', 'site_id', 'year', 'minDate')], by = c('plot_id', 'site_id', 'year'), all.x=TRUE) 
+)
+```
+
+#### write to csv 
+```{r}
+write.csv(combine2009,file = "../outputs/era5Clean/combine2009.csv")
+```
+
+
 ### 2010
 ```{r}
-
 ( rm2010 = clean2010 %>%
   arrange(id, tempDate) %>%
   group_by(id) %>%
   mutate(RollMean = zoo::rollmean(TempC, k = 5, fill = NA)) %>% 
-    filter(thw_ctv =="thaw") %>% 
-    filter(julianTemp >= 200)  %>%
+    filter(julianTemp>=200)  %>%
     ungroup() %>%
     filter(RollMean <=0) %>%
-    group_by(last_nm, plot_id, site_id) %>%
-    arrange(julianTemp) %>%
-  mutate(Goal = cumsum(c(1, diff(tempDate) > 1))) %>%
-  group_by(plot_id, site_id, Goal) %>%
-  mutate(Goal2 = min(tempDate), Goal3 = max(tempDate))
+    group_by(last_nm, plot_id, site_id, year) %>% # regroup by last name, plot id, and site id
+  #filter(site_id== "DFTB") %>%
+    arrange(julianTemp) %>% # sort by date of temp measures
+  mutate(julianTemp_diff = julianTemp - lag(julianTemp)) %>%
+  filter(julianTemp_diff >= 1) %>%
+  summarize(minDate = min(julianTemp),
+            meanDate = mean(julianTemp),
+            maxDate = max(julianTemp)) %>%
+    ungroup() %>%
+  dplyr::select(last_nm, plot_id, site_id, year, minDate) 
     
   )
 
-( distinct2010 = rm2010 %>% distinct(plot_id, site_id, year, julianTemp, Goal2, Goal3) )
+( distinct2010 = rm2010 %>% distinct(plot_id, site_id, year) )
+
 ```
+
+```{r}
+( 
+  combine2010 = merge(clean2010, rm2010[, c('plot_id', 'site_id', 'year', 'minDate')], by = c('plot_id', 'site_id', 'year'), all.x=TRUE) 
+)
+```
+
+#### write to csv 
+```{r}
+write.csv(combine2010,file = "../outputs/era5Clean/combine2010.csv")
+```
+
+
 ### 2011
 ```{r}
-
 ( rm2011 = clean2011 %>%
   arrange(id, tempDate) %>%
   group_by(id) %>%
   mutate(RollMean = zoo::rollmean(TempC, k = 5, fill = NA)) %>% 
-    filter(thw_ctv =="thaw") %>% 
-    filter(julianTemp >= 200)  %>%
+    filter(julianTemp>=200)  %>%
     ungroup() %>%
     filter(RollMean <=0) %>%
-    group_by(last_nm, plot_id, site_id) %>%
-    arrange(julianTemp) %>%
-  mutate(Goal = cumsum(c(1, diff(tempDate) > 1))) %>%
-  group_by(plot_id, site_id, Goal) %>%
-  mutate(Goal2 = min(tempDate), Goal3 = max(tempDate))
+    group_by(last_nm, plot_id, site_id, year) %>% # regroup by last name, plot id, and site id
+  #filter(site_id== "DFTB") %>%
+    arrange(julianTemp) %>% # sort by date of temp measures
+  mutate(julianTemp_diff = julianTemp - lag(julianTemp)) %>%
+  filter(julianTemp_diff >= 1) %>%
+  summarize(minDate = min(julianTemp),
+            meanDate = mean(julianTemp),
+            maxDate = max(julianTemp)) %>%
+    ungroup() %>%
+  dplyr::select(last_nm, plot_id, site_id, year, minDate) 
     
   )
 
-( distinct2011 = rm2011 %>% distinct(plot_id, site_id, year, julianTemp, Goal2, Goal3) )
+( distinct2011 = rm2011 %>% distinct(plot_id, site_id, year) )
+
 ```
+
+```{r}
+( 
+  combine2011 = merge(clean2011, rm2011[, c('plot_id', 'site_id', 'year', 'minDate')], by = c('plot_id', 'site_id', 'year'), all.x=TRUE) 
+)
+```
+
+#### write to csv 
+```{r}
+write.csv(combine2011,file = "../outputs/era5Clean/combine2011.csv")
+```
+
+
 ### 2012
 ```{r}
-
 ( rm2012 = clean2012 %>%
   arrange(id, tempDate) %>%
   group_by(id) %>%
   mutate(RollMean = zoo::rollmean(TempC, k = 5, fill = NA)) %>% 
-    filter(thw_ctv =="thaw") %>% 
-    filter(julianTemp >= 200)  %>%
+    filter(julianTemp>=200)  %>%
     ungroup() %>%
     filter(RollMean <=0) %>%
-    group_by(last_nm, plot_id, site_id) %>%
-    arrange(julianTemp) %>%
-  mutate(Goal = cumsum(c(1, diff(tempDate) > 1))) %>%
-  group_by(plot_id, site_id, Goal) %>%
-  mutate(Goal2 = min(tempDate), Goal3 = max(tempDate))
+    group_by(last_nm, plot_id, site_id, year) %>% # regroup by last name, plot id, and site id
+  #filter(site_id== "DFTB") %>%
+    arrange(julianTemp) %>% # sort by date of temp measures
+  mutate(julianTemp_diff = julianTemp - lag(julianTemp)) %>%
+  filter(julianTemp_diff >= 1) %>%
+  summarize(minDate = min(julianTemp),
+            meanDate = mean(julianTemp),
+            maxDate = max(julianTemp)) %>%
+    ungroup() %>%
+  dplyr::select(last_nm, plot_id, site_id, year, minDate) 
     
   )
 
-
-( distinct2012 = rm2012 %>% distinct(plot_id, site_id, year, julianTemp, Goal2, Goal3) )
+( distinct2012 = rm2012 %>% distinct(plot_id, site_id, year) )
 
 ```
+
+```{r}
+( 
+  combine2012 = merge(clean2012, rm2012[, c('plot_id', 'site_id', 'year', 'minDate')], by = c('plot_id', 'site_id', 'year'), all.x=TRUE) 
+)
+```
+
+#### write to csv 
+```{r}
+write.csv(combine2012,file = "../outputs/era5Clean/combine2012.csv")
+```
+
+
 ### 2013
 ```{r}
-
 ( rm2013 = clean2013 %>%
   arrange(id, tempDate) %>%
   group_by(id) %>%
   mutate(RollMean = zoo::rollmean(TempC, k = 5, fill = NA)) %>% 
-    filter(thw_ctv =="thaw") %>% 
-    filter(julianTemp >= 200)  %>%
+    filter(julianTemp>=200)  %>%
     ungroup() %>%
     filter(RollMean <=0) %>%
-    group_by(last_nm, plot_id, site_id) %>%
-    arrange(julianTemp) %>%
-  mutate(Goal = cumsum(c(1, diff(tempDate) > 1))) %>%
-  group_by(plot_id, site_id, Goal) %>%
-  mutate(Goal2 = min(tempDate), Goal3 = max(tempDate))
+    group_by(last_nm, plot_id, site_id, year) %>% # regroup by last name, plot id, and site id
+  #filter(site_id== "DFTB") %>%
+    arrange(julianTemp) %>% # sort by date of temp measures
+  mutate(julianTemp_diff = julianTemp - lag(julianTemp)) %>%
+  filter(julianTemp_diff >= 1) %>%
+  summarize(minDate = min(julianTemp),
+            meanDate = mean(julianTemp),
+            maxDate = max(julianTemp)) %>%
+    ungroup() %>%
+  dplyr::select(last_nm, plot_id, site_id, year, minDate) 
     
   )
 
-
-( distinct2013 = rm2013 %>% distinct(plot_id, site_id, year, julianTemp, Goal2, Goal3) )
+( distinct2013 = rm2013 %>% distinct(plot_id, site_id, year) )
 
 ```
+
+```{r}
+( 
+  combine2013 = merge(clean2013, rm2013[, c('plot_id', 'site_id', 'year', 'minDate')], by = c('plot_id', 'site_id', 'year'), all.x=TRUE) 
+)
+```
+
+#### write to csv 
+```{r}
+write.csv(combine2013,file = "../outputs/era5Clean/combine2013.csv")
+```
+
 ### 2014
 ```{r}
-
 ( rm2014 = clean2014 %>%
   arrange(id, tempDate) %>%
   group_by(id) %>%
   mutate(RollMean = zoo::rollmean(TempC, k = 5, fill = NA)) %>% 
-    filter(thw_ctv =="thaw") %>% 
-    filter(julianTemp >= 200)  %>%
+    filter(julianTemp>=200)  %>%
     ungroup() %>%
     filter(RollMean <=0) %>%
-    group_by(last_nm, plot_id, site_id) %>%
-    arrange(julianTemp) %>%
-  mutate(Goal = cumsum(c(1, diff(tempDate) > 1))) %>%
-  group_by(plot_id, site_id, Goal) %>%
-  mutate(Goal2 = min(tempDate), Goal3 = max(tempDate))
+    group_by(last_nm, plot_id, site_id, year) %>% # regroup by last name, plot id, and site id
+  #filter(site_id== "DFTB") %>%
+    arrange(julianTemp) %>% # sort by date of temp measures
+  mutate(julianTemp_diff = julianTemp - lag(julianTemp)) %>%
+  filter(julianTemp_diff >= 1) %>%
+  summarize(minDate = min(julianTemp),
+            meanDate = mean(julianTemp),
+            maxDate = max(julianTemp)) %>%
+    ungroup() %>%
+  dplyr::select(last_nm, plot_id, site_id, year, minDate) 
     
   )
 
-
-( distinct2014 = rm2014 %>% distinct(plot_id, site_id, year, julianTemp, Goal2, Goal3) )
+( distinct2014 = rm2014 %>% distinct(plot_id, site_id, year) )
 
 ```
+
+```{r}
+( 
+  combine2014 = merge(clean2014, rm2014[, c('plot_id', 'site_id', 'year', 'minDate')], by = c('plot_id', 'site_id', 'year'), all.x=TRUE) 
+)
+```
+
+#### write to csv 
+```{r}
+write.csv(combine2014,file = "../outputs/era5Clean/combine2014.csv")
+```
+
+
 ### 2015
 ```{r}
-
+clean2015
+```
+```{r}
 ( rm2015 = clean2015 %>%
   arrange(id, tempDate) %>%
   group_by(id) %>%
   mutate(RollMean = zoo::rollmean(TempC, k = 5, fill = NA)) %>% 
-    filter(thw_ctv =="thaw") %>% 
-    filter(julianTemp >= 200)  %>%
+    filter(julianTemp>=200)  %>%
     ungroup() %>%
     filter(RollMean <=0) %>%
-    group_by(last_nm, plot_id, site_id) %>%
-    arrange(julianTemp) %>%
-  mutate(Goal = cumsum(c(1, diff(tempDate) > 1))) %>%
-  group_by(plot_id, site_id, Goal) %>%
-  mutate(Goal2 = min(tempDate), Goal3 = max(tempDate))
+    group_by(last_nm, plot_id, site_id, year) %>% # regroup by last name, plot id, and site id
+  #filter(site_id== "DFTB") %>%
+    arrange(julianTemp) %>% # sort by date of temp measures
+  mutate(julianTemp_diff = julianTemp - lag(julianTemp)) %>%
+  filter(julianTemp_diff >= 1) %>%
+  summarize(minDate = min(julianTemp),
+            meanDate = mean(julianTemp),
+            maxDate = max(julianTemp)) %>%
+    ungroup() %>%
+  dplyr::select(last_nm, plot_id, site_id, year, minDate) 
     
   )
 
-
-( distinct2015 = rm2015 %>% distinct(plot_id, site_id, year, julianTemp, Goal2, Goal3) )
+( distinct2015 = rm2015 %>% distinct(plot_id, site_id, year) )
 
 ```
+
+```{r}
+( 
+  combine2015 = merge(clean2015, rm2015[, c('plot_id', 'site_id', 'year', 'minDate')], by = c('plot_id', 'site_id', 'year'), all.x=TRUE) 
+)
+```
+
+#### write to csv 
+```{r}
+write.csv(combine2015,file = "../outputs/era5Clean/combine2015.csv")
+```
+
 ### 2016
 ```{r}
-
 ( rm2016 = clean2016 %>%
   arrange(id, tempDate) %>%
   group_by(id) %>%
   mutate(RollMean = zoo::rollmean(TempC, k = 5, fill = NA)) %>% 
-    filter(thw_ctv =="thaw") %>% 
-    filter(julianTemp >= 200)  %>%
+    filter(julianTemp>=200)  %>%
     ungroup() %>%
     filter(RollMean <=0) %>%
-    group_by(last_nm, plot_id, site_id) %>%
-    arrange(julianTemp) %>%
-  mutate(Goal = cumsum(c(1, diff(tempDate) > 1))) %>%
-  group_by(plot_id, site_id, Goal) %>%
-  mutate(Goal2 = min(tempDate), Goal3 = max(tempDate))
+    group_by(last_nm, plot_id, site_id, year) %>% # regroup by last name, plot id, and site id
+  #filter(site_id== "DFTB") %>%
+    arrange(julianTemp) %>% # sort by date of temp measures
+  mutate(julianTemp_diff = julianTemp - lag(julianTemp)) %>%
+  filter(julianTemp_diff >= 1) %>%
+  summarize(minDate = min(julianTemp),
+            meanDate = mean(julianTemp),
+            maxDate = max(julianTemp)) %>%
+    ungroup() %>%
+  dplyr::select(last_nm, plot_id, site_id, year, minDate) 
     
   )
 
-
-( distinct2016 = rm2016 %>% distinct(plot_id, site_id, year, julianTemp, Goal2, Goal3) )
+( distinct2016 = rm2016 %>% distinct(plot_id, site_id, year) )
 
 ```
+
+```{r}
+( 
+  combine2016 = merge(clean2016, rm2016[, c('plot_id', 'site_id', 'year', 'minDate')], by = c('plot_id', 'site_id', 'year'), all.x=TRUE) 
+)
+```
+
+#### write to csv 
+```{r}
+write.csv(combine2016,file = "../outputs/era5Clean/combine2016.csv")
+```
+
 ### 2017
 ```{r}
-
 ( rm2017 = clean2017 %>%
   arrange(id, tempDate) %>%
   group_by(id) %>%
   mutate(RollMean = zoo::rollmean(TempC, k = 5, fill = NA)) %>% 
-    filter(thw_ctv =="thaw") %>% 
-    filter(julianTemp >= 200)  %>%
+    filter(julianTemp>=200)  %>%
     ungroup() %>%
     filter(RollMean <=0) %>%
-    group_by(last_nm, plot_id, site_id) %>%
-    arrange(julianTemp) %>%
-  mutate(Goal = cumsum(c(1, diff(tempDate) > 1))) %>%
-  group_by(plot_id, site_id, Goal) %>%
-  mutate(Goal2 = min(tempDate), Goal3 = max(tempDate))
+    group_by(last_nm, plot_id, site_id, year) %>% # regroup by last name, plot id, and site id
+  #filter(site_id== "DFTB") %>%
+    arrange(julianTemp) %>% # sort by date of temp measures
+  mutate(julianTemp_diff = julianTemp - lag(julianTemp)) %>%
+  filter(julianTemp_diff >= 1) %>%
+  summarize(minDate = min(julianTemp),
+            meanDate = mean(julianTemp),
+            maxDate = max(julianTemp)) %>%
+    ungroup() %>%
+  dplyr::select(last_nm, plot_id, site_id, year, minDate) 
     
   )
 
-
-( distinct2017 = rm2017 %>% distinct(plot_id, site_id, year, julianTemp, Goal2, Goal3) )
+( distinct2017 = rm2017 %>% distinct(plot_id, site_id, year) )
 
 ```
+
+```{r}
+( 
+  combine2017 = merge(clean2017, rm2017[, c('plot_id', 'site_id', 'year', 'minDate')], by = c('plot_id', 'site_id', 'year'), all.x=TRUE) 
+)
+```
+
+#### write to csv 
+```{r}
+write.csv(combine2017,file = "../outputs/era5Clean/combine2017.csv")
+```
+
 ### 2018
 ```{r}
-
 ( rm2018 = clean2018 %>%
   arrange(id, tempDate) %>%
   group_by(id) %>%
   mutate(RollMean = zoo::rollmean(TempC, k = 5, fill = NA)) %>% 
-    filter(thw_ctv =="thaw") %>% 
-    filter(julianTemp >= 200)  %>%
+    filter(julianTemp>=200)  %>%
     ungroup() %>%
     filter(RollMean <=0) %>%
-    group_by(last_nm, plot_id, site_id) %>%
-    arrange(julianTemp) %>%
-  mutate(Goal = cumsum(c(1, diff(tempDate) > 1))) %>%
-  group_by(plot_id, site_id, Goal) %>%
-  mutate(Goal2 = min(tempDate), Goal3 = max(tempDate))
+    group_by(last_nm, plot_id, site_id, year) %>% # regroup by last name, plot id, and site id
+  #filter(site_id== "DFTB") %>%
+    arrange(julianTemp) %>% # sort by date of temp measures
+  mutate(julianTemp_diff = julianTemp - lag(julianTemp)) %>%
+  filter(julianTemp_diff >= 1) %>%
+  summarize(minDate = min(julianTemp),
+            meanDate = mean(julianTemp),
+            maxDate = max(julianTemp)) %>%
+    ungroup() %>%
+  dplyr::select(last_nm, plot_id, site_id, year, minDate) 
     
   )
 
-
-( distinct2018 = rm2018 %>% distinct(plot_id, site_id, year, julianTemp, Goal2, Goal3) )
+( distinct2018 = rm2018 %>% distinct(plot_id, site_id, year) )
 
 ```
+
+```{r}
+( 
+  combine2018 = merge(clean2018, rm2018[, c('plot_id', 'site_id', 'year', 'minDate')], by = c('plot_id', 'site_id', 'year'), all.x=TRUE) 
+)
+```
+
+#### write to csv 
+```{r}
+write.csv(combine2018,file = "../outputs/era5Clean/combine2018.csv")
+```
+
 ### 2019
 ```{r}
-
 ( rm2019 = clean2019 %>%
   arrange(id, tempDate) %>%
   group_by(id) %>%
   mutate(RollMean = zoo::rollmean(TempC, k = 5, fill = NA)) %>% 
-    filter(thw_ctv =="thaw") %>% 
-    filter(julianTemp >= 200)  %>%
+    filter(julianTemp>=200)  %>%
     ungroup() %>%
     filter(RollMean <=0) %>%
-    group_by(last_nm, plot_id, site_id) %>%
-    arrange(julianTemp) %>%
-  mutate(Goal = cumsum(c(1, diff(tempDate) > 1))) %>%
-  group_by(plot_id, site_id, Goal) %>%
-  mutate(Goal2 = min(tempDate), Goal3 = max(tempDate))
+    group_by(last_nm, plot_id, site_id, year) %>% # regroup by last name, plot id, and site id
+  #filter(site_id== "DFTB") %>%
+    arrange(julianTemp) %>% # sort by date of temp measures
+  mutate(julianTemp_diff = julianTemp - lag(julianTemp)) %>%
+  filter(julianTemp_diff >= 1) %>%
+  summarize(minDate = min(julianTemp),
+            meanDate = mean(julianTemp),
+            maxDate = max(julianTemp)) %>%
+    ungroup() %>%
+  dplyr::select(last_nm, plot_id, site_id, year, minDate) 
     
   )
 
-
-( distinct2019 = rm2019 %>% distinct(plot_id, site_id, year,julianTemp, Goal2, Goal3) )
+( distinct2019 = rm2019 %>% distinct(plot_id, site_id, year) )
 
 ```
+
+```{r}
+( 
+  combine2019 = merge(clean2019, rm2019[, c('plot_id', 'site_id', 'year', 'minDate')], by = c('plot_id', 'site_id', 'year'), all.x=TRUE) 
+)
+```
+
+#### write to csv 
+```{r}
+write.csv(combine2019,file = "../outputs/era5Clean/combine2019.csv")
+```
+
 ### 2020
 ```{r}
-
 ( rm2020 = clean2020 %>%
   arrange(id, tempDate) %>%
   group_by(id) %>%
   mutate(RollMean = zoo::rollmean(TempC, k = 5, fill = NA)) %>% 
-    filter(thw_ctv =="thaw") %>% 
-    filter(julianTemp >= 200)  %>%
+    filter(julianTemp>=200)  %>%
     ungroup() %>%
     filter(RollMean <=0) %>%
-    group_by(last_nm, plot_id, site_id) %>%
-    arrange(julianTemp) %>%
-  mutate(Goal = cumsum(c(1, diff(tempDate) > 1))) %>%
-  group_by(plot_id, site_id, Goal) %>%
-  mutate(Goal2 = min(tempDate), Goal3 = max(tempDate))
+    group_by(last_nm, plot_id, site_id, year) %>% # regroup by last name, plot id, and site id
+  #filter(site_id== "DFTB") %>%
+    arrange(julianTemp) %>% # sort by date of temp measures
+  mutate(julianTemp_diff = julianTemp - lag(julianTemp)) %>%
+  filter(julianTemp_diff >= 1) %>%
+  summarize(minDate = min(julianTemp),
+            meanDate = mean(julianTemp),
+            maxDate = max(julianTemp)) %>%
+    ungroup() %>%
+  dplyr::select(last_nm, plot_id, site_id, year, minDate) 
     
   )
 
-
-( distinct2020 = rm2020 %>% distinct(plot_id, site_id, year, julianTemp, Goal2, Goal3) )
+( distinct2020 = rm2020 %>% distinct(plot_id, site_id, year) )
 
 ```
-# Bind clean thaw
+
 ```{r}
 ( 
-rm = dplyr::bind_rows(rm2001, rm2005, rm2008, rm2009, rm2010, rm2011, rm2012, rm2013, rm2014, rm2015, rm2016, rm2017, rm2018, rm2019, rm2020)
+  combine2020 = merge(clean2020, rm2020[, c('plot_id', 'site_id', 'year', 'minDate')], by = c('plot_id', 'site_id', 'year'), all.x=TRUE) 
+)
+```
+
+#### write to csv 
+```{r}
+write.csv(combine2020,file = "../outputs/era5Clean/combine2020.csv")
+```
+
+# Bind clean 
+```{r}
+( 
+combineAll = dplyr::bind_rows(combine2001, combine2005, combine2006, combine2007, combine2008, combine2009, combine2010, combine2011, combine2012, combine2013, combine2014, combine2015, combine2016, combine2017, combine2018, combine2019, combine2020) %>%
+  mutate(altDate = minDate-14)
 )
 ```
 
 
-```{r}
 
+# write to csv
+
+
+```{r eval=FALSE, include=FALSE}
+write.csv(combineAll,file = "../outputs/era5Clean/ERA5CombineAll.csv")
 ```
 
 
-# Bind distinct df
-```{r}
+
+# DELETE
+```{r eval=FALSE, include=FALSE}
 ( 
 distinct = dplyr::bind_rows(distinct2001, distinct2005, distinct2008, distinct2009, distinct2010, distinct2011, distinct2012, distinct2013, distinct2014, distinct2015, distinct2016, distinct2017, distinct2018, distinct2019, distinct2020)
 )
 ```
 
-```{r}
+```{r eval=FALSE, include=FALSE}
 ( 
   summarizeDistinct = distinct %>%
   group_by(plot_id, site_id, year) %>%
@@ -682,19 +997,19 @@ distinct = dplyr::bind_rows(distinct2001, distinct2005, distinct2008, distinct20
   
 ```
 
-```{r}
+```{r eval=FALSE, include=FALSE}
 summarizeDistinct %>% 
   group_by(plot_id, site_id) %>%
   mutate(KEEP = any(min_goal2 == max_goal2)) %>% 
   filter(KEEP == FALSE)
 ```
 
-```{r}
+```{r eval=FALSE, include=FALSE}
 unique(distinct$plot_id) 
 ```
 
 # add standard active layer thickness date column
-```{r}
+```{r eval=FALSE, include=FALSE}
 ( StdDate2001 = clean2001 %>%
   mutate(stdDateAlt = 282-14)
 )
@@ -702,7 +1017,7 @@ unique(distinct$plot_id)
 
 Make dataframe of distinct potential dates for standardizing by plot, site, name, and year
 
-```{r}
+```{r eval=FALSE, include=FALSE}
 StdDate2005 = clean2005 %>% mutate(stdDateAlt = 273-14)
 StdDate2008 = clean2008 %>% mutate(stdDateAlt = 253-14)
 StdDate2009 = clean2009 %>% mutate(stdDateAlt = 262-14)
@@ -711,12 +1026,9 @@ StdDate2011 = clean2011 %>% mutate(stdDateAlt = 302-14)
 ```
 
 **What if the standardization date is before the measure date??**
-```{r}
+```{r eval=FALSE, include=FALSE}
 StdDate2012 = clean2012 %>% mutate(stdDateAlt = 253-14)
 ```
 
-```{r}
-
-```
 
 
